--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "import urllib.request\n",
     "import tarfile\n",
+    "import numpy as np\n",
+    "import random\n",
     "import os\n",
     "import torch\n",
     "from PIL import Image\n",
@@ -18,28 +20,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T10:19:01.133639355Z",
-     "start_time": "2023-12-04T10:18:59.903647808Z"
+     "end_time": "2023-12-04T10:42:19.449121314Z",
+     "start_time": "2023-12-04T10:42:19.373180599Z"
     }
    },
    "id": "501cf1b5ea35a0dd"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[2], line 7\u001B[0m\n\u001B[1;32m      4\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPYTHONHASHSEED\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mstr\u001B[39m(seed_value)\n\u001B[1;32m      6\u001B[0m \u001B[38;5;66;03m# 2. Set `python` built-in pseudo-random generator at a fixed value\u001B[39;00m\n\u001B[0;32m----> 7\u001B[0m \u001B[43mrandom\u001B[49m\u001B[38;5;241m.\u001B[39mseed(seed_value)\n\u001B[1;32m      9\u001B[0m \u001B[38;5;66;03m# 3. Set `numpy` pseudo-random generator at a fixed value\u001B[39;00m\n\u001B[1;32m     10\u001B[0m np\u001B[38;5;241m.\u001B[39mrandom\u001B[38;5;241m.\u001B[39mseed(seed_value)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'random' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 54,
+   "outputs": [],
    "source": [
     "seed_value = 42\n",
     "\n",
@@ -67,16 +57,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-04T10:19:01.208820127Z",
-     "start_time": "2023-12-04T10:19:01.130213732Z"
+     "end_time": "2023-12-04T10:42:19.883135777Z",
+     "start_time": "2023-12-04T10:42:19.877461987Z"
     }
    },
    "id": "a06c8f4f5a639b03"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 55,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA Available: True\n",
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if CUDA is available\n",
     "# Regardless of whether or not you are using GPU create the no gpu environment for now\n",
@@ -94,7 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-12-04T10:19:01.210093702Z"
+     "end_time": "2023-12-04T10:42:22.120031661Z",
+     "start_time": "2023-12-04T10:42:22.110685116Z"
     }
    },
    "id": "1de165a5cadb4ba7"
