added img_size parameter

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -193,7 +193,8 @@
     "from augmentations import *\n",
     "\n",
     "# motivation for cropping instead of resizing: https://github.com/VainF/DeepLabV3Plus-Pytorch\n",
-    "aug_list = Compose([RandomCrop(512)])\n",
+    "img_size = 256 # pass in your image size\n",
+    "aug_list = Compose([RandomCrop(img_size)])\n",
     "pascal_original = os.path.join(data_dir, \"VOCdevkit/VOC2012\")\n",
     "if large_dataset is True:\n",
     "    pascal_augment = os.path.join(aug_data_dir, \"benchmark_RELEASE\")\n",
@@ -462,17 +463,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Adam.__init__() missing 1 required positional argument: 'params'",
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3826873516.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[66], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m epochs \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m20\u001B[39m\n\u001B[1;32m      3\u001B[0m lr \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0.001\u001B[39m\n\u001B[0;32m----> 4\u001B[0m optimizer \u001B[38;5;241m=\u001B[39m \u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43moptim\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mAdam\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlr\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mlr\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(epochs):\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEPOCH \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mepoch\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m:\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[0;31mTypeError\u001B[0m: Adam.__init__() missing 1 required positional argument: 'params'"
+      "\u001B[0;36m  Cell \u001B[0;32mIn[12], line 5\u001B[0;36m\u001B[0m\n\u001B[0;31m    optimizer = torch.optim.Adam(lr=lr, model.parameters())\u001B[0m\n\u001B[0m                                                          ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -481,7 +479,13 @@
     "from metrics_loss import *\n",
     "epochs = 20\n",
     "lr = 0.001\n",
-    "optimizer = torch.optim.Adam(lr=lr, model.parameters())\n",
+    "\n",
+    "optimizer = torch.optim.Adam(params=model.parameters(), lr=lr)\n",
+    "\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
+    "val_accs = []\n",
+    "train_accs = []\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    print(f\"EPOCH {epoch}:\")\n",
@@ -501,6 +505,9 @@
     "    batch_acc /= len(train_loader)\n",
     "    print(f\"loss: {batch_loss}\", f\"acc: {batch_acc}\")\n",
     "    \n",
+    "    train_losses.append(batch_loss)\n",
+    "    train_accs.append(batch_acc)\n",
+    "    \n",
     "    model.eval()\n",
     "    with torch.no_grad(): \n",
     "        for img, mask in tqdm(val_loader, desc=f\"Validation Loop, Epoch: {epoch}\"):\n",
@@ -512,15 +519,18 @@
     "            val_acc += accuracy\n",
     "        val_acc /= len(val_loader)\n",
     "        val_loss /= len(val_loader)\n",
-    "\n",
+    "    \n",
+    "    val_accs.append(val_acc)\n",
+    "    val_losses.append(val_loss)\n",
+    "    \n",
     "    print(f\"loss: {val_loss}\", f\"acc: {val_acc}\")\n",
     "    print()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-07T00:28:47.930270477Z",
-     "start_time": "2023-12-07T00:28:47.883188933Z"
+     "end_time": "2023-12-07T00:48:27.424894946Z",
+     "start_time": "2023-12-07T00:48:27.338559599Z"
     }
    },
    "id": "1c67c707fb024ff"
